--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -13,13 +13,12 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-size: 1em;
 }
 
-html {
-  font-family: var(--fonte-p);
-  min-height: 100vh;
+html, body {
   background-color: darkgray;
+  min-height: 100vh;
+  font-family: var(--fonte-p);
 }
 
 header {
@@ -40,8 +39,8 @@ header > p {
 }
 
 a {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
   font-weight: bolder;
 }
 
@@ -50,15 +49,15 @@ a:hover {
 }
 
 section {
-  padding-top: 75px;
-  padding-bottom: 75px;
-  line-height: 50px;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  line-height: 2em;
   padding-left: 30px;
   font-family: var(--fonte-cordel);
   font-size: 3.5vw;
 }
 
-section > p {
+section > P {
   padding-bottom: 2em;
 }
 
@@ -68,34 +67,34 @@ section.normal {
 }
 
 section.imagem {
-  background-color: rgb(39, 38, 38);
+  background-color: rgb(51, 51, 51);
   color: white;
-  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.466);
-  background-size: cover;
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.467);
   background-attachment: fixed;
-}
-
-section.imagem > p {
-  display: inline-block;
-  padding: 5px;
-  background-color: rgba(0, 0, 0, 0.514);
-  text-shadow: 1px 1px 0px black;
 }
 
 section#img01 {
   background-image: url('../imagens/background001.jpg');
   background-position: right center;
-  
+  background-size: cover;
 }
 
 section#img02 {
   background-image: url('../imagens/background002.jpg');
+  background-size: cover;
+}
 
+
+section.imagem > p {
+  background-color: rgba(0, 0, 0, 0.501);
+  display: inline-block;
+  padding: 5px;
+  text-shadow: 2px 2px 0px black;
 }
 
 footer {
   background-color: black;
-  text-align: center;
   color: white;
-  padding: 20px 10px;
+  text-align: center;
+  padding: 10px;
 }
