--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,9 @@
 @charset "UTF-8";
 
 /* Aparelho em pé (retrato) */
+
+body {
+  background: url(../imagens/cev-portrait.jpg);
+  background-size: cover;
+  background-position: center bottom;
+}
