--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -1,3 +1,22 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+html, body {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  background-repeat: no-repeat;
+
+}
+
+h1 {
+  color: white;
+  text-shadow: 3px 3px 5px #1526a7;
+  padding: 10px;
+}
