--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -5,6 +5,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body {
@@ -12,7 +13,7 @@ html, body {
   height: 100vh;
   background-color: black;
   background-repeat: no-repeat;
-
+  background-size: cover;
 }
 
 h1 {
